improved docker build
- adapted to latest changes of jenkinsci/jenkins repo
- added circle.yml for image build and push

--- a/crane.yaml
+++ b/crane.yaml
@@ -6,6 +6,8 @@ containers:
     build:
       context: .
       file: Dockerfile
+      build-arg:
+      - JENKINS_VERSION=$JENKINS_VERSION
     image: marcelhuberfoo/jenkins
     run: &crefrun
       detach: false
