--- a/circle.yml
+++ b/circle.yml
@@ -25,5 +25,5 @@ deployment:
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
       - docker push $docker_image
-      - docker tag $docker_image $docker_image:$(docker run -it --rm --entrypoint /bin/sh $docker_image -c 'echo -n ${JENKINS_VERSION}${JENKINS_PKGREL}')
-      - docker push $docker_image:$(docker run -it --rm --entrypoint /bin/sh $docker_image -c 'echo -n ${JENKINS_VERSION}${JENKINS_PKGREL}')
+      - docker tag $docker_image $docker_image:$(docker run -it --rm --entrypoint /bin/sh $docker_image -c 'echo -n ${JENKINS_VERSION}-${JENKINS_PKGREL}')
+      - docker push $docker_image:$(docker run -it --rm --entrypoint /bin/sh $docker_image -c 'echo -n ${JENKINS_VERSION}-${JENKINS_PKGREL}')
